# ModernArchive

./: CMakeLists.txt  README.md  archive.pc.in
examples/: example_usage.cpp  test_features.ps1
examples/test_data/: sample.txt
src/: Archive.cpp  Archive.h  ArchiveConsole.cpp  ArchiveConsole.h  ArchiveFormat.h  ArchiveProgress.cpp  ArchiveProgress.h  CompressionTypes.h  CrossPlatform.cpp  CrossPlatform.h  Version.h  Version.h.in  extractor_stub.cpp  main.cpp
tests/: test_archive.cpp  test_compression.cpp
